// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/user_settings/notifications/ManageAutoResponder should match snapshot, default disabled 1`] = `
<ManageAutoResponder
  autoResponderActive={false}
  autoResponderMessage="Hello World!"
  error=""
  saving={false}
  setParentState={[MockFunction]}
  submit={[MockFunction]}
  updateSection={[MockFunction]}
>
  <SettingItemMax
    containerStyle=""
    infoPosition="bottom"
    inputs={
      Array [
        <div
          className="checkbox"
          id="autoResponderCheckbox"
        >
          <label>
            <input
              checked={false}
              id="autoResponderActive"
              onChange={[Function]}
              type="checkbox"
            />
            <MemoizedFormattedMessage
              defaultMessage="Enabled"
              id="user.settings.notifications.autoResponderEnabled"
            />
          </label>
        </div>,
        <div
          className="mt-5"
        >
          <MemoizedFormattedMessage
            defaultMessage="Set a custom message that will be automatically sent in response to Direct Messages. Mentions in Public and Private Channels will not trigger the automated reply. Enabling Automatic Replies sets your status to Out of Office and disables email and push notifications."
            id="user.settings.notifications.autoResponderHint"
          />
        </div>,
      ]
    }
    saving={false}
    section=""
    shiftEnter={true}
    submit={[MockFunction]}
    title={
      <MemoizedFormattedMessage
        defaultMessage="Automatic direct message replies"
        id="user.settings.notifications.autoResponder"
      />
    }
    updateSection={[MockFunction]}
  >
    <section
      className="section-max form-horizontal "
    >
      <h4
        className="col-sm-12 section-title"
        id="settingTitle"
      >
        <MemoizedFormattedMessage
          defaultMessage="Automatic direct message replies"
          id="user.settings.notifications.autoResponder"
        >
          <span>
            Automatic direct message replies
          </span>
        </MemoizedFormattedMessage>
      </h4>
      <div
        className="sectionContent col-sm-10 col-sm-offset-2"
      >
        <div
          className="setting-list"
          tabIndex={-1}
        >
          <div
            className="setting-list-item"
          >
            <div
              className="checkbox"
              id="autoResponderCheckbox"
              key="autoResponderCheckbox"
            >
              <label>
                <input
                  checked={false}
                  id="autoResponderActive"
                  onChange={[Function]}
                  type="checkbox"
                />
                <MemoizedFormattedMessage
                  defaultMessage="Enabled"
                  id="user.settings.notifications.autoResponderEnabled"
                >
                  <span>
                    Enabled
                  </span>
                </MemoizedFormattedMessage>
              </label>
            </div>
            <div
              className="mt-5"
              key="autoResponderHint"
            >
              <MemoizedFormattedMessage
                defaultMessage="Set a custom message that will be automatically sent in response to Direct Messages. Mentions in Public and Private Channels will not trigger the automated reply. Enabling Automatic Replies sets your status to Out of Office and disables email and push notifications."
                id="user.settings.notifications.autoResponderHint"
              >
                <span>
                  Set a custom message that will be automatically sent in response to Direct Messages. Mentions in Public and Private Channels will not trigger the automated reply. Enabling Automatic Replies sets your status to Out of Office and disables email and push notifications.
                </span>
              </MemoizedFormattedMessage>
            </div>
          </div>
          <div
            className="setting-list-item"
          >
            <hr />
            <SaveButton
              disabled={false}
              onClick={[Function]}
              saving={false}
            >
              <button
                className="btn btn-primary "
                data-testid="saveSetting"
                disabled={false}
                id="saveSetting"
                onClick={[Function]}
                type="submit"
              >
                <LoadingWrapper
                  loading={false}
                  text={
                    <MemoizedFormattedMessage
                      defaultMessage="Saving"
                      id="save_button.saving"
                    />
                  }
                >
                  <span>
                    <MemoizedFormattedMessage
                      defaultMessage="Save"
                      id="save_button.save"
                    >
                      <span>
                        Save
                      </span>
                    </MemoizedFormattedMessage>
                  </span>
                </LoadingWrapper>
              </button>
            </SaveButton>
            <button
              className="btn btn-tertiary"
              id="cancelSetting"
              onClick={[Function]}
            >
              <MemoizedFormattedMessage
                defaultMessage="Cancel"
                id="setting_item_max.cancel"
              >
                <span>
                  Cancel
                </span>
              </MemoizedFormattedMessage>
            </button>
          </div>
        </div>
      </div>
    </section>
  </SettingItemMax>
</ManageAutoResponder>
`;

exports[`components/user_settings/notifications/ManageAutoResponder should match snapshot, enabled 1`] = `
<ManageAutoResponder
  autoResponderActive={true}
  autoResponderMessage="Hello World!"
  error=""
  saving={false}
  setParentState={[MockFunction]}
  submit={[MockFunction]}
  updateSection={[MockFunction]}
>
  <SettingItemMax
    containerStyle=""
    infoPosition="bottom"
    inputs={
      Array [
        <div
          className="checkbox"
          id="autoResponderCheckbox"
        >
          <label>
            <input
              checked={true}
              id="autoResponderActive"
              onChange={[Function]}
              type="checkbox"
            />
            <MemoizedFormattedMessage
              defaultMessage="Enabled"
              id="user.settings.notifications.autoResponderEnabled"
            />
          </label>
        </div>,
        <div
          id="autoResponderMessage"
        >
          <div
            className="pt-2"
          >
            <LocalizedPlaceholderTextarea
              className="form-control"
              id="autoResponderMessageInput"
              maxLength={200}
              onChange={[Function]}
              placeholder={
                Object {
                  "defaultMessage": "Message",
                  "id": "user.settings.notifications.autoResponderPlaceholder",
                }
              }
              rows={5}
              style={
                Object {
                  "resize": "none",
                }
              }
              value="Hello World!"
            />
          </div>
        </div>,
        <div
          className="mt-5"
        >
          <MemoizedFormattedMessage
            defaultMessage="Set a custom message that will be automatically sent in response to Direct Messages. Mentions in Public and Private Channels will not trigger the automated reply. Enabling Automatic Replies sets your status to Out of Office and disables email and push notifications."
            id="user.settings.notifications.autoResponderHint"
          />
        </div>,
      ]
    }
    saving={false}
    section=""
    shiftEnter={true}
    submit={[MockFunction]}
    title={
      <MemoizedFormattedMessage
        defaultMessage="Automatic direct message replies"
        id="user.settings.notifications.autoResponder"
      />
    }
    updateSection={[MockFunction]}
  >
    <section
      className="section-max form-horizontal "
    >
      <h4
        className="col-sm-12 section-title"
        id="settingTitle"
      >
        <MemoizedFormattedMessage
          defaultMessage="Automatic direct message replies"
          id="user.settings.notifications.autoResponder"
        >
          <span>
            Automatic direct message replies
          </span>
        </MemoizedFormattedMessage>
      </h4>
      <div
        className="sectionContent col-sm-10 col-sm-offset-2"
      >
        <div
          className="setting-list"
          tabIndex={-1}
        >
          <div
            className="setting-list-item"
          >
            <div
              className="checkbox"
              id="autoResponderCheckbox"
              key="autoResponderCheckbox"
            >
              <label>
                <input
                  checked={true}
                  id="autoResponderActive"
                  onChange={[Function]}
                  type="checkbox"
                />
                <MemoizedFormattedMessage
                  defaultMessage="Enabled"
                  id="user.settings.notifications.autoResponderEnabled"
                >
                  <span>
                    Enabled
                  </span>
                </MemoizedFormattedMessage>
              </label>
            </div>
            <div
              id="autoResponderMessage"
              key="autoResponderMessage"
            >
              <div
                className="pt-2"
              >
                <LocalizedPlaceholderTextarea
                  className="form-control"
                  id="autoResponderMessageInput"
                  maxLength={200}
                  onChange={[Function]}
                  placeholder={
                    Object {
                      "defaultMessage": "Message",
                      "id": "user.settings.notifications.autoResponderPlaceholder",
                    }
                  }
                  rows={5}
                  style={
                    Object {
                      "resize": "none",
                    }
                  }
                  value="Hello World!"
                >
                  <textarea
                    className="form-control"
                    id="autoResponderMessageInput"
                    maxLength={200}
                    onChange={[Function]}
                    placeholder="Message"
                    rows={5}
                    style={
                      Object {
                        "resize": "none",
                      }
                    }
                    value="Hello World!"
                  />
                </LocalizedPlaceholderTextarea>
              </div>
            </div>
            <div
              className="mt-5"
              key="autoResponderHint"
            >
              <MemoizedFormattedMessage
                defaultMessage="Set a custom message that will be automatically sent in response to Direct Messages. Mentions in Public and Private Channels will not trigger the automated reply. Enabling Automatic Replies sets your status to Out of Office and disables email and push notifications."
                id="user.settings.notifications.autoResponderHint"
              >
                <span>
                  Set a custom message that will be automatically sent in response to Direct Messages. Mentions in Public and Private Channels will not trigger the automated reply. Enabling Automatic Replies sets your status to Out of Office and disables email and push notifications.
                </span>
              </MemoizedFormattedMessage>
            </div>
          </div>
          <div
            className="setting-list-item"
          >
            <hr />
            <SaveButton
              disabled={false}
              onClick={[Function]}
              saving={false}
            >
              <button
                className="btn btn-primary "
                data-testid="saveSetting"
                disabled={false}
                id="saveSetting"
                onClick={[Function]}
                type="submit"
              >
                <LoadingWrapper
                  loading={false}
                  text={
                    <MemoizedFormattedMessage
                      defaultMessage="Saving"
                      id="save_button.saving"
                    />
                  }
                >
                  <span>
                    <MemoizedFormattedMessage
                      defaultMessage="Save"
                      id="save_button.save"
                    >
                      <span>
                        Save
                      </span>
                    </MemoizedFormattedMessage>
                  </span>
                </LoadingWrapper>
              </button>
            </SaveButton>
            <button
              className="btn btn-tertiary"
              id="cancelSetting"
              onClick={[Function]}
            >
              <MemoizedFormattedMessage
                defaultMessage="Cancel"
                id="setting_item_max.cancel"
              >
                <span>
                  Cancel
                </span>
              </MemoizedFormattedMessage>
            </button>
          </div>
        </div>
      </div>
    </section>
  </SettingItemMax>
</ManageAutoResponder>
`;
